2010-02-19  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Some region checks in scroll are not required
        https://bugs.webkit.org/show_bug.cgi?id=35142

        Removes some of the operations checking the moved and invalidated
        regions when scrolling, it is done already in
        gdk_window_move_region.

        * WebCoreSupport/ChromeClientGtk.cpp:

2010-02-25  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [Gtk] crashed when destroying
        https://bugs.webkit.org/show_bug.cgi?id=31271

        NULL-check the page before relaying the focus out event, since
        this might happen when destroying the widget without destroying
        its parent, and we currently crash.

        * tests/testwebview.c:
        (delayed_destroy):
        (test_webkit_web_view_destroy):
        (main):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_focus_in_event):

2010-02-24  Krzysztof Kotlenga <pocek@users.sf.net>

        Reviewed by Gustavo Noronha Silva.

        [Gtk] Creation of a WebkitWebView widget is very slow
        https://bugs.webkit.org/show_bug.cgi?id=30032

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::EditorClient::ignoreWordInSpellDocument): Change 'langs' to 'dicts'
        to reflect the fact that the list just holds Enchant dictionaries now.
        (WebKit::EditorClient::learnWord): Ditto.
        (WebKit::EditorClient::checkSpellingOfString): Ditto.
        (WebKit::EditorClient::getGuessesForWord): Ditto.
        * webkit/webkitprivate.h: Remove the now unused SpellLanguage struct.
        * webkit/webkitwebsettings.cpp: Change function call to reflect new
        webkit_web_settings_get_enchant_dicts name.
        (get_enchant_broker): Add this method which returns the enchant broker singleton.
        (free_spell_checking_language): The list contents have changed, so change
        the way each element is freed.